--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxtjs/cloudinary": "^1.0.3",
     "body-parser": "^1.20.0",
+    "cookie": "^0.5.0",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8",
     "uuid": "^9.0.0",
     "vue": "^2.6.14",
